# syndrik

./: .env.example  .gitignore  .sonarcloud.properties  Dockerfile  README.md  pyproject.toml
.github/workflows/: test-main.yml
src/: backup.py  main.py  utils.py
tests/functional/: test_streamlit_ui.py
