[project]
name = "syndrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llama-index>=0.12.52",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "minio>=7.2.18",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "pyarrow>=22.0.0",
    "pypdf>=5.9.0",
    "pytest>=8.4.2",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.3",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]
